src/test/deca/syntax/invalid/include-twoMainsBecauseInclude.synt
include-twoMainsBecauseInclude.deca:1: